[package]
name = "exopoll"
version = "0.1.0"
authors = ["Max Taldykin <jorpic@gmail.com>"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
byteorder = "1.2"

[dependencies.clap]
version = "2.32"
default-features = false

[dependencies.exonum]
git = "https://github.com/exonum/exonum/"
tag = "v0.9.4"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]
