[package]
name = "exopoll"
version = "0.1.0"
authors = ["Max Taldykin <jorpic@gmail.com>"]

[dependencies]
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
protobuf = "2.2"

[dependencies.exonum]
git = "https://github.com/exonum/exonum/"
rev = "9bc8ccbc6abfa078f401d9fb05b753a344338268"

[dependencies.exonum-derive]
git = "https://github.com/exonum/exonum"
rev = "9bc8ccbc6abfa078f401d9fb05b753a344338268"


[build-dependencies.exonum-build]
git = "https://github.com/exonum/exonum/"
rev = "9bc8ccbc6abfa078f401d9fb05b753a344338268"


[dev-dependencies.exonum-testkit]
git = "https://github.com/exonum/exonum"
rev = "9bc8ccbc6abfa078f401d9fb05b753a344338268"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]
