[package]
name = "exopoll"
version = "0.1.0"
authors = ["Max Taldykin <jorpic@gmail.com>"]

[dependencies]
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
protobuf = "2.2"

[dependencies.exonum]
git = "https://github.com/exonum/exonum/"
rev = "8045239800ece0721d8961ddca0684ebfdcde101"

[dependencies.exonum-derive]
git = "https://github.com/exonum/exonum"
rev = "8045239800ece0721d8961ddca0684ebfdcde101"


[build-dependencies.exonum-build]
git = "https://github.com/exonum/exonum/"
rev = "8045239800ece0721d8961ddca0684ebfdcde101"


[dev-dependencies.exonum-testkit]
git = "https://github.com/exonum/exonum"
rev = "8045239800ece0721d8961ddca0684ebfdcde101"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-fmt", "run-cargo-clippy"]
